--- a/registerPage.css
+++ b/registerPage.css
@@ -1,5 +1,3 @@
-/* REGISTRATION CONTAINER */
-
 * {
     margin: 0;
     padding: 0;
@@ -48,23 +46,23 @@ form input, form button{
 }
 
 form input:hover {
-    border-color: #888; /* Darker gray border on hover */
-    background-color: #e2e2e2; /* Slightly darker background */
+    border-color: #888;
+    background-color: #e2e2e2;
 }
 
 form button{
     margin-top: 10px;
-    background-color: #9e9e9e; /* Light gray */
+    background-color: #9e9e9e;
     color: white;
     border: none;
     font-size: 18px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    margin-bottom: 0px; /* Remove margin-bottom for button */
+    margin-bottom: 0px;
 }
 
 form button:hover {
-    background-color: #616161; /* Darker gray on hover */
+    background-color: #616161;
 }
 
 .login-link {
